WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237146
Fix bad logging in SharedWorkerObjectConnection::notifyWorkerObjectOfLoadCompletion()
https://bugs.webkit.org/show_bug.cgi?id=237146
Summary
Fix bad logging in SharedWorkerObjectConnection::notifyWorkerObjectOfLoadComp...
Chris Dumez
Reported
2022-02-24 10:51:18 PST
Fix bad logging in SharedWorkerObjectConnection::notifyWorkerObjectOfLoadCompletion(). It was logging an error even when the load succeeded.
Attachments
Patch
(2.25 KB, patch)
2022-02-24 10:52 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-02-24 10:52:29 PST
Created
attachment 453118
[details]
Patch
Geoffrey Garen
Comment 2
2022-02-24 11:16:39 PST
Comment on
attachment 453118
[details]
Patch r=me
Chris Dumez
Comment 3
2022-02-24 11:41:44 PST
Comment on
attachment 453118
[details]
Patch Clearing flags on attachment: 453118 Committed
r290445
(
247748@trunk
): <
https://commits.webkit.org/247748@trunk
>
Chris Dumez
Comment 4
2022-02-24 11:41:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2022-02-24 11:42:22 PST
<
rdar://problem/89430596
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug