Fix bad logging in SharedWorkerObjectConnection::notifyWorkerObjectOfLoadCompletion() https://bugs.webkit.org/show_bug.cgi?id=237146

Reviewed by Geoffrey Garen.

Fix bad logging in SharedWorkerObjectConnection::notifyWorkerObjectOfLoadCompletion().
It was logging an error even when the load succeeded.

* workers/shared/SharedWorkerObjectConnection.cpp:
(WebCore::SharedWorkerObjectConnection::notifyWorkerObjectOfLoadCompletion):


Canonical link: https://commits.webkit.org/247748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290445 268f45cc-cd09-0410-ab3c-d52691b4dbfc